--- a/index.html
+++ b/index.html
@@ -61,22 +61,39 @@ p {
                 <a href="https://mendonhouse.blogspot.com/">Progress Platform</a>
             </p>
             <p>
-                Text about process
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute<br>
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
+                deserunt mollit anim id est laborum.
             </p>
 
             <h1>
                 Deliverables
             </h1>
             <p>
-                Text about deliverables
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute<br>
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
+                deserunt mollit anim id est laborum.
             </p>
+
 
             <h1>
                 Summary
             </h1>
             <p>
-                Text about summary
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>
+                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud<br>
+                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute<br>
+                irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla<br>
+                pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia<br>
+                deserunt mollit anim id est laborum.
             </p>
+
 
         </div>
     </div>
