--- a/summary.html
+++ b/summary.html
@@ -54,7 +54,7 @@
                   <div class="col-md-12 ftco-animate text-center">
                     <div class="desc">
 
-                      <h1 style="background-image: url(images/green.png);">Instagram</h1>
+                      <h1 style="background-image: url(images/green.png);">Summary</h1>
                      
                     </div>
                   </div>
@@ -67,7 +67,7 @@
                     <div class="row no-gutters">
                         <div class="col-md-12 blog-wrap">
                             <div class="row no-gutters align-items-center">
-                                <div class="col-md-6 img js-fullheight" style="background-image: url(images/insta.jpeg);">
+                                <div class="col-md-6 img js-fullheight" style="background-image: url(images/family.png);">
                                     
                                 </div>
                                 <div class="col-md-6">
@@ -75,17 +75,22 @@
                                         <div class="icon d-flex align-items-center mb-5">
                                         </div>
                                         <p class="mb-4">
-                                          Accessibility was a huge priority for me with this project. The whole point of rewriting these recipes was to make it 
-                                          so the outside world could have access. <br>
+                                            In the 80’s, the idea of owning a restaurant was just a dream for my grandparents. 
+                                            Their restaurants turned into second careers, and while it wasn’t their intention, 
+                                            these restaurants impacted dozens of employees and generations of family that followed them.
                                           <br>
-                                          In addition to writing a cookbook for Mendon House, I set up an
-                                          <a href="https://www.instagram.com/mendonhouse/"><span>Instagram</span></a> page. I wanted this page to serve as a catalog 
-                                          of sorts to document the process I went through to get to my final product. I also realized that it would be important 
-                                          to create some sort of network to get the Mendon House cookbook out into the world. We live in an age where Social Media 
-                                          dominates the internet, so I thought it would be smart to take advantage of a platform that makes it quick and easy to 
-                                          share and spread information.<br>                                                                             
+                                          <br>
+                                          When my grandfather passed two years ago, nearly two decades after the doors to Mendon House closed, 
+                                          approximately half of the attendees of his funeral were former employees. Seeing people gather 
+                                          to remember him emphasized the impact that my grandfather had, and made it that more important 
+                                          to take the recipes that had been left to my family and preserve them.
+                                          <br>         
+                                          <br>
+                                          While I hope that one day these recipes are once again accessible for the general population, 
+                                          what matters is that his legacy is documented and conserved for any further descendants. Ultimately, 
+                                          that is what I hope to have accomplished with this project.                                                       
                                         </a></p> 
-                                        <p class="mb-0 mt-4"><a href="deliverables.html" class="btn btn-primary"> Deliverables <span class="ion-ios-arrow-forward"></span></a></p>
+                                        <p class="mb-0 mt-4"><a href="index.html" class="btn btn-primary"> Home <span class="ion-ios-arrow-forward"></span></a></p>
                                     </div>
                                 </div>
                             </div>
