--- a/summary.html
+++ b/summary.html
@@ -90,6 +90,8 @@
                                           what matters is that his legacy is documented and conserved for any further descendants. Ultimately, 
                                           that is what I hope to have accomplished with this project.                                                       
                                         </a></p> 
+                                        <a href="https://mendonhouse.blogspot.com/"><span>Progress Platform</span></a>
+                                        <a href="https://docs.google.com/document/d/1N8oXa1wAtmKuR8bmx48gul0ml9n5obUFiT-2vh0a7AA/edit?usp=sharing"><span>Resources</span></a>
                                         <p class="mb-0 mt-4"><a href="index.html" class="btn btn-primary"> Home <span class="ion-ios-arrow-forward"></span></a></p>
                                     </div>
                                 </div>
